fix: Changelog icon not showing🥸

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1077,7 +1077,11 @@ html[class*='docs-doc-id-setup/changelog'] h3[id^='fixed'] + ul li:before,
 html[class*='docs-doc-id-setup/changelog'] h3[id^='added'] + ul li:before,
 html[class*='docs-doc-id-setup/changelog'] h3[id^='deprecated'] + ul li:before,
 html[class*='docs-doc-id-setup/changelog'] h3[id^='removed'] + ul li:before,
-html[class*='docs-doc-id-setup/changelog'] h3[id^='security'] + ul li:before {
+html[class*='docs-doc-id-setup/changelog'] h3[id^='removals'] + ul li:before,
+html[class*='docs-doc-id-setup/changelog'] h3[id^='security'] + ul li:before,
+html[class*='docs-doc-id-setup/changelog'] h3[id^='additions'] + ul li:before,
+html[class*='docs-doc-id-setup/changelog'] h3[id^='changes'] + ul li:before,
+html[class*='docs-doc-id-setup/changelog'] h3[id^='fixes'] + ul li:before {
   content: '' !important;
   display: inline-block !important;
   height: 12px !important;
@@ -1089,13 +1093,15 @@ html[class*='docs-doc-id-setup/changelog'] h3[id^='security'] + ul li:before {
   background-repeat: no-repeat !important;
 }
 
-html[class*='docs-doc-id-setup/changelog'] h3[id^='fixed'] + ul li:before {
+html[class*='docs-doc-id-setup/changelog'] h3[id^='fixed'] + ul li:before,
+html[class*='docs-doc-id-setup/changelog'] h3[id^='fixes'] + ul li:before {
   background: url(/icons/fix.svg) !important;
   background-size: contain !important;
   background-repeat: no-repeat !important;
 }
 
-html[class*='docs-doc-id-setup/changelog'] h3[id^='added'] + ul li:before {
+html[class*='docs-doc-id-setup/changelog'] h3[id^='added'] + ul li:before,
+html[class*='docs-doc-id-setup/changelog'] h3[id^='additions'] + ul li:before {
   background: url(/icons/add.svg);
   background-size: contain !important;
   background-repeat: no-repeat !important;
@@ -1107,7 +1113,8 @@ html[class*='docs-doc-id-setup/changelog'] h3[id^='deprecated'] + ul li:before {
   background-repeat: no-repeat !important;
 }
 
-html[class*='docs-doc-id-setup/changelog'] h3[id^='removed'] + ul li:before {
+html[class*='docs-doc-id-setup/changelog'] h3[id^='removed'] + ul li:before,
+html[class*='docs-doc-id-setup/changelog'] h3[id^='removals'] + ul li:before {
   background: url(/icons/remove.svg) !important;
   background-size: contain !important;
   background-repeat: no-repeat !important;
